# led-controller

./: Cargo.toml  README.md
src/: controller.rs  daemon.rs  effects.rs  helpers.rs  main.rs
src/effects/: coding.rs  music_visualiser.rs  rainbow.rs  random.rs  test.rs  typing_ripple.rs
