[package]
name = "led-controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
colored = "2.0.4"
nix = { version = "0.26.2", features = ["fs"] }
fs4 = { version = "0.6.6", features = ["sync"] }
rand = "0.8.5"
reqwest = "0.11.18"
sacn-unofficial = "0.9.0"
tokio = { version = "1.29.1", features = ["full"] }
zbus = "3.14.1"
serde = "1.0.183"
zvariant = "3.15.0"
enum-iterator = "1.4.1"
neovim-lib = "0.6.0"
